--- a/scripts/colab_transcoder_test.ipynb
+++ b/scripts/colab_transcoder_test.ipynb
@@ -22,10 +22,21 @@
     "colab": {
       "name": "colab_transcoder_test.ipynb",
       "provenance": [],
-      "toc_visible": true
+      "toc_visible": true,
+      "include_colab_link": true
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/ArturHD/TransCoder/blob/master/scripts/colab_transcoder_test.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "metadata": {
@@ -63,10 +74,40 @@
         "id": "cBB05vB1RPDx"
       },
       "source": [
-        "# Import and check Torch installation\n",
-        "import numpy as np\n",
-        "import torch as th\n",
-        "print(\"Torch version:\", th.__version__)\n"
+        "# Load trained models\n",
+        "!mkdir /content/TransCoder/models\n",
+        "\n",
+        "!cd /content/TransCoder/models; wget https://dl.fbaipublicfiles.com/transcoder/model_1.pth \n",
+        "!cd /content/TransCoder/models; wget https://dl.fbaipublicfiles.com/transcoder/model_2.pt"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "M30acDXAYPtD"
+      },
+      "source": [
+        "# Install needed Python3 packages\n",
+        "!pip install fastBPE\n",
+        "!pip install Moses\n",
+        "!pip install libclang\n",
+        "!pip install submitit\n",
+        "!pip install six\n",
+        "!pip install sacrebleu==\"1.2.11\""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "JAfLom3QXrLe"
+      },
+      "source": [
+        "# Try example translation\n",
+        "!cd /content/TransCoder/; python3 translate.py --src_lang cpp --tgt_lang java --model_path data/TrainedModels/model_1.pth < /content/TransCoder/data/tests_artur/primes.cpp"
       ],
       "execution_count": null,
       "outputs": []
