--- a/scripts/colab_transcoder_test.ipynb
+++ b/scripts/colab_transcoder_test.ipynb
@@ -22,10 +22,21 @@
     "colab": {
       "name": "colab_transcoder_test.ipynb",
       "provenance": [],
-      "toc_visible": true
-    }
+      "include_colab_link": true
+    },
+    "accelerator": "GPU"
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/ArturHD/TransCoder/blob/master/scripts/colab_transcoder_test.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "metadata": {
@@ -50,7 +61,7 @@
         "!mkdir /content/adata/models\n",
         "\n",
         "!cd /content/adata/models; wget https://dl.fbaipublicfiles.com/transcoder/model_1.pth \n",
-        "!cd /content/adata/models; wget https://dl.fbaipublicfiles.com/transcoder/model_2.pth"
+        "# !cd /content/adata/models; wget https://dl.fbaipublicfiles.com/transcoder/model_2.pth"
       ],
       "execution_count": null,
       "outputs": []
@@ -75,14 +86,56 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "JAfLom3QXrLe"
+        "id": "JAfLom3QXrLe",
+        "outputId": "61334966-d0e6-469e-8a1b-b57fcf6c1aa1",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 563
+        }
       },
       "source": [
         "# Try example translation\n",
         "!cd /content/TransCoder/; pwd; python3 translate.py --src_lang cpp --tgt_lang java --model_path ../adata/models/model_1.pth < /content/TransCoder/data/tests_artur/primes.cpp"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/content/TransCoder\n",
+            "Loading codes from /content/TransCoder/data/BPE_with_comments_codes ...\n",
+            "Read 50000 codes from the codes file.\n",
+            "====================\n",
+            "@ SuppressLint ( \"NewApi\" ) public static void main ( String [ ] args ) {\n",
+            "  int i , n ;\n",
+            "  boolean isPrime = true ;\n",
+            "  System . out . println ( \"Enter a positive integer: \" ) ;\n",
+            "  n = Integer . parseInt ( args [ 0 ] ) ;\n",
+            "  if ( n == 0 || n == 1 ) {\n",
+            "    isPrime = false ;\n",
+            "  }\n",
+            "  else {\n",
+            "    for ( i = 2 ;\n",
+            "    i <= n / 2 ;\n",
+            "    ++ i ) {\n",
+            "      if ( n % i == 0 ) {\n",
+            "        isPrime = false ;\n",
+            "        break ;\n",
+            "      }\n",
+            "    }\n",
+            "  }\n",
+            "  if ( isPrime ) {\n",
+            "    System . out . println ( n + \" is a prime number\" ) ;\n",
+            "  }\n",
+            "  else {\n",
+            "    System . out . println ( n + \" is not a prime number\" ) ;\n",
+            "  }\n",
+            "}\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
