Added infos how to setup pyan with html output

--- a/scripts/colab_transcoder_test.ipynb
+++ b/scripts/colab_transcoder_test.ipynb
@@ -91,12 +91,65 @@
    },
    "source": [
     "# Tools for callgraphs\n",
-    "!pip install pycallgraph2\n",
-    "#!pip install git+https://github.com/Technologicat/pyan.git\n",
-    "!pip install pyan"
+    "#!pip install pycallgraph2\n",
+    "!pip install git+https://github.com/Technologicat/pyan.git\n",
+    "# Need to fix this pyan version by adding the following line to site-packages/pyan/__init__.py:11\n",
+    "# from typing import Callable, Iterator, Union, Optional, List\n",
+    "#!pip install pyan"
    ],
    "execution_count": null,
    "outputs": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# Try example translation\n",
+    "!cd /content/TransCoder/; pwd; python3 translate.py --src_lang cpp --tgt_lang java --model_path ../adata/models/model_1.pth < /content/TransCoder/data/tests_artur/primes.cpp"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# Try example translation with pycallgraph2 (fails)\n",
+    "# pycallgraph graphviz -- ./mypythonscript.py\n",
+    "!cd /content/TransCoder/; pwd; pycallgraph graphviz -- ./translate.py --src_lang cpp --tgt_lang java --model_path ../adata/models/model_1.pth < /content/TransCoder/data/tests_artur/primes.cpp"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# Create static call graph of the project\n",
+    "#!alias pygraph='find . -iname \"*.py\" | xargs pyan3 --dot --colored --no-defines --grouped | dot -Tpng -Granksep=1.5 | open -f -a /Applications/Preview.app'\n",
+    "# !alias pygraph='find . -iname \"*.py\" | xargs pyan3 --dot --colored --no-defines --grouped | dot -Tpng -Granksep=1.5'\n",
+    "!alias pygraph='find . -iname \"*.py\" | xargs pyan3 --uses --no-defines --colored --grouped --annotated --dot | dot -Tpng -Granksep=1.5 > callgraph.png'\n",
+    "!alias pygraph2='find . -iname \"*.py\" | xargs pyan --uses --no-defines --colored --grouped --annotated --html --file callgraph.html'\n",
+    "# !cd /content/TransCoder/; pwd; pygraph\n",
+    "!cd /content/TransCoder/; pwd; find . -iname \"*.py\" | xargs pyan --dot --colored --no-defines --grouped | dot -Tpng -Granksep=1.5 | open -f -a /Applications/Preview.app"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
@@ -109,8 +162,13 @@
     }
    },
    "source": [
-    "# Try example translation\n",
-    "!cd /content/TransCoder/; pwd; python3 translate.py --src_lang cpp --tgt_lang java --model_path ../adata/models/model_1.pth < /content/TransCoder/data/tests_artur/primes.cpp"
+    "# Create static call graph of the project\n",
+    "#!alias pygraph='find . -iname \"*.py\" | xargs pyan3 --dot --colored --no-defines --grouped | dot -Tpng -Granksep=1.5 | open -f -a /Applications/Preview.app'\n",
+    "# !alias pygraph='find . -iname \"*.py\" | xargs pyan3 --dot --colored --no-defines --grouped | dot -Tpng -Granksep=1.5'\n",
+    "!alias pygraph='find . -iname \"*.py\" | xargs pyan3 --uses --no-defines --colored --grouped --annotated --dot | dot -Tpng -Granksep=1.5 > callgraph.png'\n",
+    "!alias pygraph2='find . -iname \"*.py\" | xargs pyan3 --uses --no-defines --colored --grouped --annotated --html --file callgraph.html'\n",
+    "# !cd /content/TransCoder/; pwd; pygraph\n",
+    "!cd /content/TransCoder/; pwd; find . -iname \"*.py\" | xargs pyan --dot --colored --no-defines --grouped | dot -Tpng -Granksep=1.5 | open -f -a /Applications/Preview.app"
    ],
    "execution_count": 3,
    "outputs": [
